# project-icon

./: converter.py  pyproject.toml  requirements.txt
core/: db.sqlite3
core/backend/: settings.py  urls.py
core/templates/: components.yaml  index.html
