[tool.poetry]
name = "project-icon"
version = "0.1.0"
description = ""
authors = ["Igor Lopes <igor.lop.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
django = "^5.0.6"
slippers = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
